--- a/view.html
+++ b/view.html
@@ -33,7 +33,10 @@
             <h3><strong>Current Reservation</strong></h3>
           </div>
           <div class="card-body">
-            <input type="text" id="character-search" class="form-control">
+            <input type="text" id="reservation-search" class="form-control">
+            <div id="name">
+              
+            </div>
             <br>
            
           </div>
@@ -53,7 +56,19 @@
       </div>
     </div>
   </div>
+<script type="text/javascript">
+// $("#search-btn").on("click", function() {
+//   var searchReservations = $("#reservation-search").val().trim();
+//   searchReservations = searchReservations.replace(/\s+/g, "").toLowerCase();
 
+ $.get("/api/reservation/", function(data) {
+   console.log(data);
+   if(data) {
+     $("#name").text(data.Name);
+   }
+ })
+// })
+</script>
   
 </body>
 
